--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,18 @@
 {
   "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    // Stage 3
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
     [
-      "@babel/preset-env"
-    ]
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": false
+      }
+    ],
+    "@babel/plugin-proposal-json-strings"
   ]
 }
